# Angewandte-Kryptologie

./: README.md
Example/example_1/: ue01_TheHobbit  ue01_kasiski-test.py  wahrscheinlichkeit  wahrscheinlichkeit.c
XProgrammieraufgabe/code/: Doxyfile.config  abgabe.c  aes_sbox  aes_sbox.c  bksq.c  doxyfy.cmd  gcc.sh  main.c  multi_2  multi_2.c  test.c
XProgrammieraufgabe/code/bksq/: CMakeLists.txt  bksq.c  bksq.h  main.c
XProgrammieraufgabe/code/doc/html/: abgabe_8c.html  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8c.html  printbase16_8c.html  struct_c_o_n_t_e_x_t.html
XProgrammieraufgabe/code/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_7.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  search.js  variables_0.js
XProgrammieraufgabe/testvectors/: bksq.h  testvectors.txt
